--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /*Configuração de tela em paisagem */
+
+body {
+    background-image: url('../imagens/cev-landscape.jpg');
+    background-position: left bottom;
+}
