--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -1,3 +1,78 @@
 @charset "UTF-8";
 
 /*todas as demais midias */
+
+/*typical device breakpoints:
+pequenas telas: até 600px;
+celular: de 600px a 768px;
+tablet: de 768px até 992px;
+desktop: de 992px até 1200px;
+grandes telas: acima de 1200px; */
+
+@media print {
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+    body {
+    background-image: url('../imagens/back-print.jpg');
+    }
+    main {
+        border: 2px solid black;
+    }
+
+    main::after {
+        text-decoration: overline;
+        content: 'Essa impressão foi feita através do site www.cursoemvideo.com';
+    }
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone {display:none;}
+    img#tablet {display: none;}
+    img#TV{display:none;}
+    img#print{display: block;}
+    img#PC{display:none;}
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: url('../imagens/back-tablet.jpg');
+    }
+
+    img#phone {display:none;}
+    img#tablet {display: block;}
+    img#TV{display:none;}
+    img#print{display:none;}
+    img#PC{display:none;}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    body {
+        background-image: url('../imagens/back-pc.jpg');
+    }
+    
+    img#phone {display:none;}
+    img#tablet {display: none;}
+    img#TV{display:none;}
+    img#print{display:none;}
+    img#PC{display:block;}
+
+}
+
+@media screen and (min-width: 1200px) {
+    body {
+        background-image: url('../imagens/back-tv.jpg');
+    }
+
+    main {
+        width: 700px;
+    }
+    
+    img#phone {display:none;}
+    img#tablet {display: none;}
+    img#TV{display:block;}
+    img#print{display:none;}
+    img#PC{display:none;}
+}
