--- a/exercicios/ex026/mq004/estilos/style.css
+++ b/exercicios/ex026/mq004/estilos/style.css
@@ -41,5 +41,5 @@ img {
 img#phone { display: block; }
 img#tablet { display: none; }
 img#print { display: none; }
-img#pc { display: none; }
-img#tv { display: none; }
+img#PC { display: none; }
+img#TV { display: none; }
