--- a/desafios/estilo/media-query.css
+++ b/desafios/estilo/media-query.css
@@ -35,13 +35,30 @@ grandes telas: acima de 1200px; */
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
     }
+
+    div#formulario > p {
+        font-size: 1.2em;
+    }
+
+    div#formuario > h1 {
+        font-size: 2em;
+    }
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
 }
