--- a/desafios/estilo/media-query.css
+++ b/desafios/estilo/media-query.css
@@ -13,6 +13,7 @@ grandes telas: acima de 1200px; */
     }
     section#login {
         width: 80vw;
+        height: 280px;
     }
     section#login > div#imagem {
         float: left;
@@ -32,6 +33,7 @@ grandes telas: acima de 1200px; */
     }
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
